--- a/partI.html
+++ b/partI.html
@@ -1,6 +1,3 @@
-<!DOCTYPE html>
-<html>
-
 <head>
     <title>
         Basic I
@@ -9,11 +6,57 @@
 
 <body>
     <h1>
-        What language do you love?
+        My Registration Form
     </h1>
     <p>
-        I love HTML!
+        <label for="first_name">First Name:</label>
+        <input type="text" id="first_name" name="first_name">
     </p>
+
+    <p>
+        <label for="last_name">Last Name:</label>
+        <input type="text" id="last_name" name="last_name">
+    </p>
+
+    <p>
+        <label for="email">Email:</label>
+        <input type="text" id="email" name="email">
+    </p>
+
+    <p>
+        <label for="password">Password</label>
+        <input type="password" id="password" name="password">
+    </p>
+
+    <p>
+        <label for="PW Confirm">PW Confirm</label>
+        <input type="password" id="password" name="password">
+    </p>
+
+    <p>
+        <label for="birthday">Birthday</label>
+        <input type="date" id="DOB" name="DOB" value="2020-12-03" min="1950-01-01" max="2020-12-31">
+    </p>
+
+    <input type="radio" id="male" name="gender" value="male">
+    <label for="male">Male</label>
+        <input type="radio" id="female" name="gender" value="female">
+    <label for="female">Female</label>
+    <input type="radio" id="decline" name="gender" value="decline">
+    <label for="decline">Prefer not to say</label>
+
+    <p>A short description about yourslef:</p>
+    <textarea name="description"></textarea>
+
+    <p>Favorite Language</p>
+    <select name="Favorite Language">
+        <option value="Python">Python</option>
+        <option value="Java">Java</option>
+        <option value="English">English</option>
+    </select>
+
+    <input type="submit" value="Submit">
+
 </body>
 
 </html>
